--- a/debian/control
+++ b/debian/control
@@ -5,11 +5,12 @@ Build-Depends: gettext, dpkg (>= 1.18.7), dpkg-dev (>= 1.17.14), xz-utils, file,
  autoconf, gawk, debhelper (>= 10), rdfind, symlinks, netbase, gperf, bison,
  linux-libc-dev (>= 3.9) [linux-any],
  libaudit-dev [linux-any], libcap-dev [linux-any], libselinux-dev [linux-any],
- mig (>= 1.5-3) [hurd-i386], gnumach-dev (>= 2:1.8+git20170102-1~) [hurd-i386],
- hurd-dev (>= 1:0.9.git20180305~) [hurd-i386] | hurd-headers-dev [hurd-i386],
- hurd-dev (>= 1:0.9.git20180305~) [hurd-i386] <!stage1> | libihash-dev [hurd-i386] <!stage1>,
+ mig (>= 1.5-3) [hurd-i386], gnumach-dev (>= 2:1.8+git20181103-1~) [hurd-i386],
+ hurd-dev (>= 1:0.9.git20181030-1) [hurd-i386] | hurd-headers-dev [hurd-i386],
+ hurd-dev (>= 1:0.9.git20181030-1) [hurd-i386] <!stage1> | libihash-dev [hurd-i386] <!stage1>,
  kfreebsd-kernel-headers [kfreebsd-any],
  binutils (>= 2.29),
+ g++-7 [armel],
  g++-8, g++-8-multilib [amd64 i386 kfreebsd-amd64 mips mipsel mipsn32 mipsn32el mips64 mips64el mipsr6 mipsr6el mipsn32r6 mipsn32r6el mips64r6 mips64r6el powerpc ppc64 s390x sparc sparc64 x32] <!nobiarch>,
  python3:native <!nocheck>,
  libidn2-0 (>= 2.0.5~) <!nocheck>,
@@ -19,7 +20,7 @@ Maintainer: GNU Libc Maintainers <debian-glibc@lists.debian.org>
 Uploaders: Clint Adams <clint@debian.org>, Aurelien Jarno <aurel32@debian.org>, Adam Conrad <adconrad@0c3.net>, Samuel Thibault <sthibault@debian.org>
 Standards-Version: 4.2.1
 Vcs-Browser: https://salsa.debian.org/glibc-team/glibc
-Vcs-Git: https://salsa.debian.org/glibc-team/glibc.git
+Vcs-Git: https://salsa.debian.org/glibc-team/glibc.git -b glibc-2.28
 Homepage: https://www.gnu.org/software/libc/libc.html
 
 Package: libc-bin
