--- a/debian/control
+++ b/debian/control
@@ -19,8 +19,10 @@ Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 XSBC-Original-Maintainer: GNU Libc Maintainers <debian-glibc@lists.debian.org>
 Uploaders: Clint Adams <clint@debian.org>, Aurelien Jarno <aurel32@debian.org>, Adam Conrad <adconrad@0c3.net>, Samuel Thibault <sthibault@debian.org>
 Standards-Version: 4.2.1
-Vcs-Browser: https://salsa.debian.org/glibc-team/glibc
-Vcs-Git: https://salsa.debian.org/glibc-team/glibc.git
+Vcs-Browser: https://git.launchpad.net/~ubuntu-core-dev/ubuntu/+source/glibc
+Vcs-Git: https://git.launchpad.net/~ubuntu-core-dev/ubuntu/+source/glibc
+XSBC-Original-Vcs-Browser: https://salsa.debian.org/glibc-team/glibc
+XSBC-Original-Vcs-Git: https://salsa.debian.org/glibc-team/glibc.git
 Homepage: https://www.gnu.org/software/libc/libc.html
 
 Package: libc-bin
